# arhitecture-and-design-of-software

./: README.md
241-327_LR3_PatokinPE/LAB3/: CMakeLists.txt  httpclient.cpp  httpclient.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  nerf.cpp  nerf.h  nerfdialog.cpp  nerfdialog.h  nerfdialog.ui
Desktop/Python/Architecture_and_design/Lab_rabota_№1/lab1/: db.sqlite3
Desktop/Python/Architecture_and_design/Lab_rabota_№1/lab1/lab1/: settings.py  urls.py
Desktop/Python/Architecture_and_design/Lab_rabota_№1/lab1/mainapp/: __init__.py  admin.py  serializers.py  tests.py  views.py
Desktop/Python/Architecture_and_design/Lab_rabota_№1/lab1/mainapp/management/commands/: seed_nerf.py
Desktop/Python/Architecture_and_design/Lab_rabota_№1/lab1/mainapp/migrations/: 0001_initial.py  __init__.py
Desktop/Python/Architecture_and_design/Lab_rabota_№1/lab1/templates/: base.html  create.html  delete.html  list.html  update.html
Lab_rabota_№2/: docker-compose.yaml
Lab_rabota_№2/backend/: dockerfile  manage.py  requirements.txt
Lab_rabota_№2/backend/lab1/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
Lab_rabota_№2/backend/lab1/templates/: detail.html
Lab_rabota_№2/backend/mainapp/: apps.py  models.py  serializers.py  views.py
Lab_rabota_№2/backend/mainapp/management/commands/: seed_nerf.py
Lab_rabota_№2/backend/mainapp/migrations/: 0002_alter_nerf_id.py
Lab_rabota_№2/nginx/: dockerfile
Lab_rabota_№2/nginx/ssl/: server.crt  server.key
Lab_rabota_№2/nginx/templates/: default.conf.template
